@@ -1,3 +1,9 @@
+2010-10-29 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m91-1:
+	- new snapshot
+	- update external source tree
+	
 2010-10-23 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m90-1:
